[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/DamageAreaDark.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/player.png" type="Texture" id=2]
[ext_resource path="res://Sprites/active.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 74.108

[node name="DamageAreaDark" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 43, 31 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.419608, 0.141176, 0.862745, 0.537255 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Sprite1" type="Sprite" parent="."]
visible = false
modulate = Color( 0.419608, 0.141176, 0.862745, 0.537255 )
position = Vector2( 7.62939e-06, 79 )
scale = Vector2( 1.375, 1.34375 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.419608, 0.141176, 0.862745, 0.537255 )
position = Vector2( 80, 79 )
scale = Vector2( 1.375, 1.34375 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
visible = false
modulate = Color( 0.419608, 0.141176, 0.862745, 0.537255 )
position = Vector2( 80, 0 )
scale = Vector2( 1.375, 1.34375 )
texture = ExtResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
